# ai-dial

./: .env.local.template  .gitignore  README.md  README_DEV.md  RUN.MD  TASK.MD  pyproject.toml  run.sh  run_sdk_echo.sh
common/: cfg.py
dial-docker-compose/application/core/: config.json
dial-sdk/examples/echo/: app.py
dial-sdk/examples/langchain_rag/: app.py
script/: app_echo_run.sh  app_rag_run.sh  dial_app_core_logs.sh  dial_app_core_restart.sh  dial_app_restart.sh  dial_app_restart_force.sh  dial_app_run.sh  dial_app_stop.sh  poc_app_run.sh
