[tool.poetry]
name = "ai-dial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "2.32.3"
openai = "1.35.15"
langchain-openai = "0.1.17"
aidial-sdk = ">=0.10"
python-dotenv = "^1.0.1"
langchain = "0.2.9"
langchain-community = "0.2.9"
langchain-text-splitters = "0.2.2"
tiktoken = "0.7.0"
beautifulsoup4 = "4.12.3"
chromadb = "0.5.4"
uvicorn = "0.30.1"
pypdf = "4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
